--- a/chatcore/chat/public/userChat.html
+++ b/chatcore/chat/public/userChat.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1,minimum-scale=1,user-scalable=no">
-		<link rel="stylesheet" href="aui.css" />
-        <link rel="stylesheet" href="userChating.css" />
+		<link rel="stylesheet" href="css/aui.css" />
+        <link rel="stylesheet" href="css/userChating.css" />
 	</head>
 	<body>
 		<section class="aui-chat">
@@ -24,13 +24,12 @@
     <img src="http://rd.bigeergeek.com/admin/images/5.png" alt="" />
     </div><textarea class="inputMessage" placeholder="" id="main"></textarea><button class="fsBtn" >发送</button></div>
     <!--<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>-->
-        <script src="jquery.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-    <script src="chatCore.js"></script>
-    <script src="dpt.js"></script>
-    <script src="saveAndLoad.js"></script>
-    
-    <script src="dropload.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/chatCore.js"></script>
+    <script src="js/dpt.js"></script>
+    <script src="js/saveAndLoad.js"></script>
+    <script src="js/dropload.min.js"></script>
 
 	</body>
 
