update message notread bubble

--- a/cw_chatcore/chat/public/userChat.html
+++ b/cw_chatcore/chat/public/userChat.html
@@ -19,10 +19,17 @@
 
             </ul>
         </div>
-<div class="btnBox"><div class="xfBox" style="display:inline-block;float:left;position:relative;top:0.4rem;left:0;margin-left: 1%;">
-    
-    <img src="http://rd.bigeergeek.com/admin/images/5.png" alt="" />
-    </div><textarea class="inputMessage" placeholder="" id="main"></textarea><button class="fsBtn" >发送</button></div>
+<div class="btnBox">
+        <div class="xfBox" style="display:inline-block;float:left;position:relative;top:0.4rem;left:0;margin-left: 1%;">
+            <img src="images/ren.png" alt="" />
+        </div>
+        <textarea class="inputMessage" placeholder="" id="main"></textarea>
+        <button class="fsBtn" >发送</button>
+</div>
+    <div class="messNoticeBox">
+        <img src="images/msgnotice.png" alt="Alternate Text" />
+        <span>1</span>
+    </div>
     <!--<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>-->
         <script src="jquery.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
