--- a/chatcore/chat/public/userChat.html
+++ b/chatcore/chat/public/userChat.html
@@ -1,28 +1,31 @@
 ﻿<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-		<meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1,minimum-scale=1,user-scalable=no">
-		<link rel="stylesheet" href="css/aui.css" />
-        <link rel="stylesheet" href="css/userChating.css" />
-	</head>
-	<body>
-		<section class="aui-chat">
-            <div role="loadGif" style="width:100%;height:2rem;text-align: center;display:none"><img style="display: inline-block;height:100%;" src="images/loadPic.gif" /></div>
-                <ul id="chatArea">
-                </ul>
-        </section>
-        <div class="memberWrap">
-            <ul class="personList">
-
-
-            </ul>
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+    <meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <link rel="stylesheet" href="css/aui.css" />
+    <link rel="stylesheet" href="css/userChating.css" />
+</head>
+<body>
+    <section class="aui-chat">
+        <div role="loadGif" style="width:100%;height:2rem;text-align: center;display:none"><img style="display: inline-block;height:100%;" src="images/loadPic.gif" /></div>
+        <ul id="chatArea"></ul>
+    </section>
+    <div class="memberWrap">
+        <ul class="personList"></ul>
+    </div>
+    <div class="btnBox">
+        <div class="xfBox" style="display:inline-block;float:left;position:relative;top:0.4rem;left:0;margin-left: 1%;">
+            <img src="images/ren.png" alt="" />
         </div>
-<div class="btnBox"><div class="xfBox" style="display:inline-block;float:left;position:relative;top:0.4rem;left:0;margin-left: 1%;">
-    
-    <img src="http://rd.bigeergeek.com/admin/images/5.png" alt="" />
-    </div><textarea class="inputMessage" placeholder="" id="main"></textarea><button class="fsBtn" >发送</button></div>
+        <textarea class="inputMessage" placeholder="" id="main"></textarea>
+        <button class="fsBtn">发送</button>
+    </div>
+    <div class="messNoticeBox">
+        <img src="images/msgnotice.png" alt="Alternate Text" />
+        <span>1</span>
+    </div>
     <!--<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>-->
     <script src="js/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -31,7 +34,7 @@
     <script src="js/saveAndLoad.js"></script>
     <script src="js/dropload.min.js"></script>
 
-	</body>
+</body>
 
 
 
