加入了消息发送loading效果

--- a/cw_chatcore/chat/public/userChat.html
+++ b/cw_chatcore/chat/public/userChat.html
@@ -6,6 +6,18 @@
 		<meta name="viewport" content="initial-scale=1,width=device-width,maximum-scale=1,minimum-scale=1,user-scalable=no">
 		<link rel="stylesheet" href="aui.css" />
         <link rel="stylesheet" href="userChating.css" />
+        <style>
+            .aui-chat .loading-content-left {
+                background: #b3e5fc url(images/loadPic.gif) no-repeat 94% center;
+                background-size: 12px 12px;
+                padding-right: 0.9rem;
+            }
+            .aui-chat .loading-content-right {
+                background: #b3e5fc url(images/loadPic.gif) no-repeat 3px center;
+                background-size: 12px 12px;
+                padding-left: 0.9rem;
+            }
+        </style>
 	</head>
 	<body>
         <!--
